Add aggregateRating values

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,13 @@
         "author": {
             "@type": "Person",
             "name": "Cesare Forelli"
+        },
+        "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "4.7",
+            "ratingCount": "626",
+            "bestRating": "5",
+            "worstRating": "3"
         }
     }
     </script>
