--- a/_includes/glancecam4.html
+++ b/_includes/glancecam4.html
@@ -32,7 +32,7 @@
                         • <b>GlanceGrids</b>, the new grid system with presets that dinamically adapts the layout upon window resizing. New in GlanceCam 4, flexible grids are a companion or an alternative – your choice – to having multiple independent windows for your cameras are a great and highly customisable solution to never miss anything happening in your streams.<br><br>
                         • An optional <b>Minimalistic user interface</b> that removes everything but the video stream.<br><br>
                         • <b><a href="https://cdf1982.com/glancecam/faqs#cyclemode">Cycle mode</a></b>: choose one of your windows and have it rotate some or all of your cameras according to a time interval you define.<br><br>
-						• The ability to <b>force a custom aspect-ratio</b>, for non standard streams such as horizontally compressed ones or vertical cameras.<br><br>
+						• The ability to <b>force a custom aspect-ratio</b>, for non standard streams such as horizontally compressed ones or vertical cameras. GlanceCam is undoubtedly the best app for 180° panorama cameras and other non-16:9 devices.<br><br>
                         • Support for displaying internal and USB-attached cameras.<br><br>
 						• A <b>preferential channel for email support</b>, guaranteed in less than 24 hours, Monday through Friday.<br><br>
 						• <b>14 funny and cute custom icons</b> to choose from, both in the modern style and in the "classic" round form (icon customisation is only shown in the Dock while GlanceCam is running).						
